--- a/app/src/pages/page-home.html
+++ b/app/src/pages/page-home.html
@@ -216,7 +216,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </paper-card>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-8">
           <paper-card class="big-detail">
             <div class="card-content">
@@ -239,7 +239,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </div>
           </paper-card>
         </div>
-      </div>
+      </div> -->
     </div>
   </template>
   <script src="/bower_components/chart.js/dist/Chart.js"></script>
@@ -277,106 +277,106 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           // // console.log("config = ",this.config);
           // console.log("config jobapi= ",this.jobapi); 
 
-          window.chartColors = {
-            red: 'rgb(255, 99, 132)',
-            orange: 'rgb(255, 159, 64)',
-            yellow: 'rgb(255, 205, 86)',
-            green: 'rgb(75, 192, 192)',
-            blue: 'rgb(54, 162, 235)',
-            purple: 'rgb(153, 102, 255)',
-            grey: 'rgb(201, 203, 207)'
-          };
-          window.randomScalingFactor = function () {
-            return (Math.random() > 0.5 ? 1.0 : -1.0) * Math.round(Math.random() * 100);
-          };
-          // Any of the following formats may be used
-          var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
-          var config = {
-            type: 'line',
-            data: {
-              labels: ["January", "February", "March", "April", "May", "June", "July"],
-              datasets: [{
-                label: "My First dataset",
-                backgroundColor: window.chartColors.red,
-                borderColor: window.chartColors.red,
-                data: [
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor()
-                ],
-                fill: false,
-              }, {
-                label: "My Second dataset",
-                fill: false,
-                backgroundColor: window.chartColors.blue,
-                borderColor: window.chartColors.blue,
-                data: [
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor()
-                ],
-              }]
-            },
-            options: {
-              responsive: true,
-              title: {
-                display: true,
-                text: 'Chart.js Line Chart'
-              },
-              tooltips: {
-                mode: 'index',
-                intersect: false,
-              },
-              hover: {
-                mode: 'nearest',
-                intersect: true
-              },
-              scales: {
-                xAxes: [{
-                  display: true,
-                  scaleLabel: {
-                    display: true,
-                    labelString: 'Month'
-                  }
-                }],
-                yAxes: [{
-                  display: true,
-                  scaleLabel: {
-                    display: true,
-                    labelString: 'Value'
-                  }
-                }]
-              }
-            }
-          };
-          var lineChart = new Chart(this.$.lineChart, config)
-          var pieChart = new Chart(this.$.pieChart, {
-            type: 'doughnut',
-            data: {
-              labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-              datasets: [{
-                label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
-                backgroundColor: [
-                  'rgba(255, 99, 132, 1)',
-                  'rgba(54, 162, 235, 1)',
-                  'rgba(255, 206, 86, 1)',
-                  'rgba(75, 192, 192, 1)',
-                  'rgba(153, 102, 255, 1)',
-                  'rgba(255, 159, 64, 1)'
-                ],
-                borderWidth: 1
-              }]
-            }
-          });
+        //   window.chartColors = {
+        //     red: 'rgb(255, 99, 132)',
+        //     orange: 'rgb(255, 159, 64)',
+        //     yellow: 'rgb(255, 205, 86)',
+        //     green: 'rgb(75, 192, 192)',
+        //     blue: 'rgb(54, 162, 235)',
+        //     purple: 'rgb(153, 102, 255)',
+        //     grey: 'rgb(201, 203, 207)'
+        //   };
+        //   window.randomScalingFactor = function () {
+        //     return (Math.random() > 0.5 ? 1.0 : -1.0) * Math.round(Math.random() * 100);
+        //   };
+        //   // Any of the following formats may be used
+        //   var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+        //   var config = {
+        //     type: 'line',
+        //     data: {
+        //       labels: ["January", "February", "March", "April", "May", "June", "July"],
+        //       datasets: [{
+        //         label: "My First dataset",
+        //         backgroundColor: window.chartColors.red,
+        //         borderColor: window.chartColors.red,
+        //         data: [
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor()
+        //         ],
+        //         fill: false,
+        //       }, {
+        //         label: "My Second dataset",
+        //         fill: false,
+        //         backgroundColor: window.chartColors.blue,
+        //         borderColor: window.chartColors.blue,
+        //         data: [
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor(),
+        //           randomScalingFactor()
+        //         ],
+        //       }]
+        //     },
+        //     options: {
+        //       responsive: true,
+        //       title: {
+        //         display: true,
+        //         text: 'Chart.js Line Chart'
+        //       },
+        //       tooltips: {
+        //         mode: 'index',
+        //         intersect: false,
+        //       },
+        //       hover: {
+        //         mode: 'nearest',
+        //         intersect: true
+        //       },
+        //       scales: {
+        //         xAxes: [{
+        //           display: true,
+        //           scaleLabel: {
+        //             display: true,
+        //             labelString: 'Month'
+        //           }
+        //         }],
+        //         yAxes: [{
+        //           display: true,
+        //           scaleLabel: {
+        //             display: true,
+        //             labelString: 'Value'
+        //           }
+        //         }]
+        //       }
+        //     }
+        //   };
+        //   var lineChart = new Chart(this.$.lineChart, config)
+        //   var pieChart = new Chart(this.$.pieChart, {
+        //     type: 'doughnut',
+        //     data: {
+        //       labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        //       datasets: [{
+        //         label: '# of Votes',
+        //         data: [12, 19, 3, 5, 2, 3],
+        //         backgroundColor: [
+        //           'rgba(255, 99, 132, 1)',
+        //           'rgba(54, 162, 235, 1)',
+        //           'rgba(255, 206, 86, 1)',
+        //           'rgba(75, 192, 192, 1)',
+        //           'rgba(153, 102, 255, 1)',
+        //           'rgba(255, 159, 64, 1)'
+        //         ],
+        //         borderWidth: 1
+        //       }]
+        //     }
+        //   });
 
         })
       }
