--- a/app/src/pages/page-home.html
+++ b/app/src/pages/page-home.html
@@ -96,11 +96,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
       }
 
-      .container-fluid{
+      .container-fluid {
         /* background: red !important; */
         height: 100% !important;
       }
-      .fullHeight{
+
+      .fullHeight {
         height: 100% !important;
       }
     </style>
@@ -123,7 +124,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-card class="lite-detail" style="--paper-card-background-color: var(--google-green-500);">
             <div class="card-content">
               <div class="paper-header">
-                <iron-icon icon="icons:check-circle"></iron-icon> [[jobs.length]] Active jobs</div>
+                <iron-icon icon="icons:check-circle"></iron-icon> [[countActive]] Active jobs</div>
             </div>
           </paper-card>
         </div>
@@ -142,7 +143,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <div class="card-content" style="padding-right: 0;">
               <div class="paper-header">BigStream Dashboard</div>
               <div class="rate-name">Status</div>
-             
+
               <!-- <div class="rate-name">Mac Miller</div>
               <div class="row console no-gutters">
                 <div class="col-sm-6">
@@ -255,7 +256,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script src="/bower_components/chart.js/dist/Chart.js"></script>
   <script>
     class PageHome extends Polymer.Element {
-      static get is() { return 'page-home'; }
+      static get is() {
+        return 'page-home';
+      }
 
       static get properties() {
         return {
@@ -271,6 +274,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           },
           countInactive: {
             type: Number
+          },
+          countActive: {
+            type: Number
           }
         }
       }
@@ -279,7 +285,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         super.ready();
 
         Polymer.RenderStatus.afterNextRender(this, () => {
-          
+
           this.$.updateJobsList.generateRequest();
           // this.config = store.get();
 
@@ -287,106 +293,106 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           // // console.log("config = ",this.config);
           // console.log("config jobapi= ",this.jobapi); 
 
-        //   window.chartColors = {
-        //     red: 'rgb(255, 99, 132)',
-        //     orange: 'rgb(255, 159, 64)',
-        //     yellow: 'rgb(255, 205, 86)',
-        //     green: 'rgb(75, 192, 192)',
-        //     blue: 'rgb(54, 162, 235)',
-        //     purple: 'rgb(153, 102, 255)',
-        //     grey: 'rgb(201, 203, 207)'
-        //   };
-        //   window.randomScalingFactor = function () {
-        //     return (Math.random() > 0.5 ? 1.0 : -1.0) * Math.round(Math.random() * 100);
-        //   };
-        //   // Any of the following formats may be used
-        //   var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
-        //   var config = {
-        //     type: 'line',
-        //     data: {
-        //       labels: ["January", "February", "March", "April", "May", "June", "July"],
-        //       datasets: [{
-        //         label: "My First dataset",
-        //         backgroundColor: window.chartColors.red,
-        //         borderColor: window.chartColors.red,
-        //         data: [
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor()
-        //         ],
-        //         fill: false,
-        //       }, {
-        //         label: "My Second dataset",
-        //         fill: false,
-        //         backgroundColor: window.chartColors.blue,
-        //         borderColor: window.chartColors.blue,
-        //         data: [
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor(),
-        //           randomScalingFactor()
-        //         ],
-        //       }]
-        //     },
-        //     options: {
-        //       responsive: true,
-        //       title: {
-        //         display: true,
-        //         text: 'Chart.js Line Chart'
-        //       },
-        //       tooltips: {
-        //         mode: 'index',
-        //         intersect: false,
-        //       },
-        //       hover: {
-        //         mode: 'nearest',
-        //         intersect: true
-        //       },
-        //       scales: {
-        //         xAxes: [{
-        //           display: true,
-        //           scaleLabel: {
-        //             display: true,
-        //             labelString: 'Month'
-        //           }
-        //         }],
-        //         yAxes: [{
-        //           display: true,
-        //           scaleLabel: {
-        //             display: true,
-        //             labelString: 'Value'
-        //           }
-        //         }]
-        //       }
-        //     }
-        //   };
-        //   var lineChart = new Chart(this.$.lineChart, config)
-        //   var pieChart = new Chart(this.$.pieChart, {
-        //     type: 'doughnut',
-        //     data: {
-        //       labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        //       datasets: [{
-        //         label: '# of Votes',
-        //         data: [12, 19, 3, 5, 2, 3],
-        //         backgroundColor: [
-        //           'rgba(255, 99, 132, 1)',
-        //           'rgba(54, 162, 235, 1)',
-        //           'rgba(255, 206, 86, 1)',
-        //           'rgba(75, 192, 192, 1)',
-        //           'rgba(153, 102, 255, 1)',
-        //           'rgba(255, 159, 64, 1)'
-        //         ],
-        //         borderWidth: 1
-        //       }]
-        //     }
-        //   });
+          //   window.chartColors = {
+          //     red: 'rgb(255, 99, 132)',
+          //     orange: 'rgb(255, 159, 64)',
+          //     yellow: 'rgb(255, 205, 86)',
+          //     green: 'rgb(75, 192, 192)',
+          //     blue: 'rgb(54, 162, 235)',
+          //     purple: 'rgb(153, 102, 255)',
+          //     grey: 'rgb(201, 203, 207)'
+          //   };
+          //   window.randomScalingFactor = function () {
+          //     return (Math.random() > 0.5 ? 1.0 : -1.0) * Math.round(Math.random() * 100);
+          //   };
+          //   // Any of the following formats may be used
+          //   var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+          //   var config = {
+          //     type: 'line',
+          //     data: {
+          //       labels: ["January", "February", "March", "April", "May", "June", "July"],
+          //       datasets: [{
+          //         label: "My First dataset",
+          //         backgroundColor: window.chartColors.red,
+          //         borderColor: window.chartColors.red,
+          //         data: [
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor()
+          //         ],
+          //         fill: false,
+          //       }, {
+          //         label: "My Second dataset",
+          //         fill: false,
+          //         backgroundColor: window.chartColors.blue,
+          //         borderColor: window.chartColors.blue,
+          //         data: [
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor(),
+          //           randomScalingFactor()
+          //         ],
+          //       }]
+          //     },
+          //     options: {
+          //       responsive: true,
+          //       title: {
+          //         display: true,
+          //         text: 'Chart.js Line Chart'
+          //       },
+          //       tooltips: {
+          //         mode: 'index',
+          //         intersect: false,
+          //       },
+          //       hover: {
+          //         mode: 'nearest',
+          //         intersect: true
+          //       },
+          //       scales: {
+          //         xAxes: [{
+          //           display: true,
+          //           scaleLabel: {
+          //             display: true,
+          //             labelString: 'Month'
+          //           }
+          //         }],
+          //         yAxes: [{
+          //           display: true,
+          //           scaleLabel: {
+          //             display: true,
+          //             labelString: 'Value'
+          //           }
+          //         }]
+          //       }
+          //     }
+          //   };
+          //   var lineChart = new Chart(this.$.lineChart, config)
+          //   var pieChart = new Chart(this.$.pieChart, {
+          //     type: 'doughnut',
+          //     data: {
+          //       labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+          //       datasets: [{
+          //         label: '# of Votes',
+          //         data: [12, 19, 3, 5, 2, 3],
+          //         backgroundColor: [
+          //           'rgba(255, 99, 132, 1)',
+          //           'rgba(54, 162, 235, 1)',
+          //           'rgba(255, 206, 86, 1)',
+          //           'rgba(75, 192, 192, 1)',
+          //           'rgba(153, 102, 255, 1)',
+          //           'rgba(255, 159, 64, 1)'
+          //         ],
+          //         borderWidth: 1
+          //       }]
+          //     }
+          //   });
 
         })
       }
@@ -394,7 +400,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       async _responseJobs(e) {
 
         this.config = store.get();
-        this.jobapi = this.config.api.job_api;//this.config.get('api.job_api');
+        this.jobapi = this.config.api.job_api; //this.config.get('api.job_api');
         // console.log("config = ",this.config);
         // console.log("config jobapi= ", this.jobapi);
 
@@ -403,9 +409,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         let res = e.detail.response;
         // console.log("job = ", this.jobs.length);
 
-        let countInactive = await this.countDataInactive(this.jobs.length)
+        let count = await this.countDataInactive(this.jobs.length)
         // .then((countInactive) => {
-        this.countInactive = countInactive;
+        this.countInactive = count.countInactive;
+        this.countActive = count.countActive;
         // });
 
         // this.jobLists.push({
@@ -419,32 +426,39 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       async countDataInactive(len) {
+
+        // var self = this;
+
         if (len > 0) {
           let _jobLists = [];
           let _countInactive = 0;
           return new Promise((res, rej) => {
             let _countInactive = 0;
+            let _countActive = 0;
             this.jobs.forEach((job, index) => {
               let url = `${this.jobapi}/${encodeURIComponent(job)}`;
               // console.log("_countInactive : ", _countInactive);
               $.getJSON(url, function (data) {
-                _jobLists.push({
-                  "job_id": job,
-                  "active": (data.active === 'true' || data.active == true)
-                });
+                  _jobLists.push({
+                    "job_id": job,
+                    "active": (data.active === 'true' || data.active == true)
+                  });
 
-                if (data.active === 'true' || data.active == true) {
-
-                }
-                else {
-                  _countInactive++;
-                }
-                // console.log("data = ", data);
-                if (index == len - 1) {
-                  // console.log("_countInactive : ", _countInactive);
-                  res(_countInactive);
-                }
-              })
+                  if (data.active === 'true' || data.active == true) {
+                    _countActive++;
+                    // console.log("countActive = ",self.countActive);
+                  } else {
+                    _countInactive++;
+                  }
+                  // console.log("data = ", data);
+                  if (index == len - 1) {
+                    // console.log("_countInactive : ", _countInactive);
+                    res({
+                      countInactive: _countInactive,
+                      countActive: _countActive
+                    });
+                  }
+                })
                 .fail((jqXHR, textStatus, errorThrown) => {
                   // material.clearCache();
                   console.log("error = ", errorThrown);
