--- a/app/src/common/dashboard-sidemenu.html
+++ b/app/src/common/dashboard-sidemenu.html
@@ -243,7 +243,7 @@
             <!-- <div style="border: 1px solid rgba(114, 114, 114,0.3);padding: 15px;border-radius: 10px;margin:10px 0px;"> -->
 
             <div class="form-group">
-                <h6>Console API</h6>
+                <h6>Control API</h6>
                 <input type="text" class="form-control" value="{{config.api.job::input}}" placeholder="Ex. http://localhost:19980/v1">
                 <!-- <div class="form-control-feedback" hidden>Can't use space in job name</div> -->
             </div>
