--- a/app/src/pages/page-setting.html
+++ b/app/src/pages/page-setting.html
@@ -75,7 +75,7 @@
                             <div class="d-flex">
                                 <div style="width: 70%;padding-right:15px;">
                                     <div class="form-group row">
-                                        <label for="example-text-input" class="col-12 col-form-label">Console API</label>
+                                        <label for="example-text-input" class="col-12 col-form-label">Control API</label>
                                         <div class="col-12">
                                             <input class="form-control" type="url" value="{{config.api.job::input}}" id="example-text-input" placeholder="Ex. http://localhost:19980/v1">
                                         </div>
