add new logo, fix bug count inactive, active , disabled open toggle code in Job Editor page

--- a/app/index.html
+++ b/app/index.html
@@ -376,11 +376,11 @@
       document.getElementById('login').classList.add('not-logged');
 
       defaultLogin();
-      console.log("_logedinCheck1store = ", store.get());
+      // console.log("_logedinCheck1store = ", store.get());
     }
     else {
 
-      console.log("_logedinCheck 2store = ", store);
+      // console.log("_logedinCheck 2store = ", store);
     }
   }
   window.addEventListener('WebComponentsReady', function (e) {
