--- a/app/src/pages/page-jobs-editor.html
+++ b/app/src/pages/page-jobs-editor.html
@@ -237,6 +237,10 @@
             .btn-import {
                 /* background: #dddddd !important; */
             }
+
+            .btOpenToggle[disabled]{
+                background: #dddddd;
+            }
         </style>
 
 
@@ -351,9 +355,9 @@
             <!-- <paper-button class="btn btn-outline-warning toggleEditor" on-click="_jobTreeDialogToggle" hidden$="[[!fileOpened]]">
                 <iron-icon icon="hardware:device-hub"></iron-icon> Tree
             </paper-button> -->
-            <!-- <paper-button class="btn btn-secondary toggleEditor" on-click="_toggleEditor" hidden$="[[!fileOpened]]">
+            <paper-button disabled="true" class="btn btn-secondary toggleEditor btOpenToggle" on-click="_toggleEditor" hidden$="[[!fileOpened]]">
                 <iron-icon icon="icons:menu"></iron-icon>
-            </paper-button> -->
+            </paper-button>
 
         </app-toolbar>
         <div class="container-fluid no-gutters main-page">
