--- a/app/src/pages/page-home.html
+++ b/app/src/pages/page-home.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="/bower_components/polymer/polymer-element.html">
 <link rel="import" href="../shared-styles.html">
+<script src="/bower_components/chart.js/dist/Chart.js"></script>
 
 <dom-module id="page-home">
   <template>
@@ -105,10 +106,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 100% !important;
       }
     </style>
-    <iron-ajax loading="{{loading}}" url="[[config.api.job_api]]" handle-as="json" last-response="{{jobs}}" on-error="_ajexerror"
-      id="updateJobsList" on-response="_responseJobs"></iron-ajax>
+
+    <iron-ajax loading="{{loading}}" url="[[config.api.job_api]]" handle-as="json" last-response="{{jobs}}" on-error="_responseJobs"
+      id="updateJobsList" on-response="_responseJobs" auto></iron-ajax>
     <iron-ajax url="[[config.api.storages_api]]" loading="{{loading}}" handle-as="json" last-response="{{storages}}" id="updateStorageLists"
-      on-error="_ajexerror" auto></iron-ajax>
+      on-response="_responseStorage" on-error="_responseStorage" auto></iron-ajax>
 
     <div class="container-fluid">
       <div class="row">
@@ -116,7 +118,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-card class="lite-detail" style="--paper-card-background-color: var(--paper-cyan-a700)">
             <div class="card-content">
               <div class="paper-header">
-                <iron-icon icon="device:storage"></iron-icon> [[storages.length]] storages</div>
+                <iron-icon icon="device:storage"></iron-icon> [[countStorage]] storages</div>
             </div>
           </paper-card>
         </div>
@@ -144,116 +146,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <div class="paper-header">BigStream Dashboard</div>
               <div class="rate-name">Status</div>
 
-              <!-- <div class="rate-name">Mac Miller</div>
-              <div class="row console no-gutters">
-                <div class="col-sm-6">
-
-                  <div class="console-msg">
-                    <small class="card-title">Last at 01-04-2017, 00:00:00</small>
-                    <p class="card-text">agritronics-MMSIIIV116-005-1</p>
-                    <div class="datetime">
-                      <span>11</span>
-                      <span>messages</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="console-msg">
-                    <small class="card-title">Last at 01-04-2017, 00:00:00</small>
-                    <p class="card-text">agritronics-MMSIIIV116-005-1</p>
-                    <div class="datetime">
-                      <span>23</span>
-                      <span>messages</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="console-msg">
-                    <small class="card-title">Last at 01-04-2017, 00:00:00</small>
-                    <p class="card-text">agritronics-MMSIIIV116-005-1</p>
-                    <div class="datetime">
-                      <span>25</span>
-                      <span>messages</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="console-msg">
-                    <small class="card-title">Last at 01-04-2017, 00:00:00</small>
-                    <p class="card-text">agritronics-MMSIIIV116-005-1</p>
-                    <div class="datetime">
-                      <span>25</span>
-                      <span>messages</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="console-msg">
-                    <small class="card-title">Last at 01-04-2017, 00:00:00</small>
-                    <p class="card-text">agritronics-MMSIIIV116-005-1</p>
-                    <div class="datetime">
-                      <span>25</span>
-                      <span>messages</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="console-msg">
-                    <small class="card-title">Last at 01-04-2017, 00:00:00</small>
-                    <p class="card-text">agritronics-MMSIIIV116-005-1</p>
-                    <div class="datetime">
-                      <span>25</span>
-                      <span>messages</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="console-msg">
-                    <small class="card-title">Last at 01-04-2017, 00:00:00</small>
-                    <p class="card-text">agritronics-MMSIIIV116-005-1</p>
-                    <div class="datetime">
-                      <span>25</span>
-                      <span>messages</span>
-                    </div>
-                  </div>
-                </div>
-
-
-
-              </div> -->
             </div>
             <div class="card-actions">
             </div>
           </paper-card>
         </div>
       </div>
-      <!-- <div class="row">
-        <div class="col-sm-8">
-          <paper-card class="big-detail">
-            <div class="card-content">
-              <div class="paper-header">Some information</div>
-              <div class="rate-name">Mac Miller</div>
-              <canvas id="lineChart"></canvas>
-            </div>
-            <div class="card-actions">
-            </div>
-          </paper-card>
-        </div>
-        <div class="col-sm-4">
-          <paper-card class="big-detail">
-            <div class="card-content">
-              <div class="paper-header">Some information</div>
-              <div class="rate-name">Mac Miller</div>
-              <canvas id="pieChart"></canvas>
-            </div>
-            <div class="card-actions">
-            </div>
-          </paper-card>
-        </div>
-      </div> -->
+
     </div>
   </template>
-  <script src="/bower_components/chart.js/dist/Chart.js"></script>
+
   <script>
     class PageHome extends Polymer.Element {
       static get is() {
@@ -279,6 +181,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           countActive: {
             type: Number,
             value: 0
+          },
+          countStorage: {
+            type: Number,
+            value: 0
           }
         }
       }
@@ -288,183 +194,90 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         Polymer.RenderStatus.afterNextRender(this, () => {
 
-          this.$.updateJobsList.generateRequest();
+          // this.$.updateJobsList.generateRequest();
           // this.config = store.get();
-
-          // this.jobapi = this.config.api.job_api;//this.config.get('api.job_api');
-          // // console.log("config = ",this.config);
-          // console.log("config jobapi= ",this.jobapi); 
-
-          //   window.chartColors = {
-          //     red: 'rgb(255, 99, 132)',
-          //     orange: 'rgb(255, 159, 64)',
-          //     yellow: 'rgb(255, 205, 86)',
-          //     green: 'rgb(75, 192, 192)',
-          //     blue: 'rgb(54, 162, 235)',
-          //     purple: 'rgb(153, 102, 255)',
-          //     grey: 'rgb(201, 203, 207)'
-          //   };
-          //   window.randomScalingFactor = function () {
-          //     return (Math.random() > 0.5 ? 1.0 : -1.0) * Math.round(Math.random() * 100);
-          //   };
-          //   // Any of the following formats may be used
-          //   var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
-          //   var config = {
-          //     type: 'line',
-          //     data: {
-          //       labels: ["January", "February", "March", "April", "May", "June", "July"],
-          //       datasets: [{
-          //         label: "My First dataset",
-          //         backgroundColor: window.chartColors.red,
-          //         borderColor: window.chartColors.red,
-          //         data: [
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor()
-          //         ],
-          //         fill: false,
-          //       }, {
-          //         label: "My Second dataset",
-          //         fill: false,
-          //         backgroundColor: window.chartColors.blue,
-          //         borderColor: window.chartColors.blue,
-          //         data: [
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor(),
-          //           randomScalingFactor()
-          //         ],
-          //       }]
-          //     },
-          //     options: {
-          //       responsive: true,
-          //       title: {
-          //         display: true,
-          //         text: 'Chart.js Line Chart'
-          //       },
-          //       tooltips: {
-          //         mode: 'index',
-          //         intersect: false,
-          //       },
-          //       hover: {
-          //         mode: 'nearest',
-          //         intersect: true
-          //       },
-          //       scales: {
-          //         xAxes: [{
-          //           display: true,
-          //           scaleLabel: {
-          //             display: true,
-          //             labelString: 'Month'
-          //           }
-          //         }],
-          //         yAxes: [{
-          //           display: true,
-          //           scaleLabel: {
-          //             display: true,
-          //             labelString: 'Value'
-          //           }
-          //         }]
-          //       }
-          //     }
-          //   };
-          //   var lineChart = new Chart(this.$.lineChart, config)
-          //   var pieChart = new Chart(this.$.pieChart, {
-          //     type: 'doughnut',
-          //     data: {
-          //       labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-          //       datasets: [{
-          //         label: '# of Votes',
-          //         data: [12, 19, 3, 5, 2, 3],
-          //         backgroundColor: [
-          //           'rgba(255, 99, 132, 1)',
-          //           'rgba(54, 162, 235, 1)',
-          //           'rgba(255, 206, 86, 1)',
-          //           'rgba(75, 192, 192, 1)',
-          //           'rgba(153, 102, 255, 1)',
-          //           'rgba(255, 159, 64, 1)'
-          //         ],
-          //         borderWidth: 1
-          //       }]
-          //     }
-          //   });
 
         })
       }
 
+      _responseStorage(e) {
+        this.countStorage = 0;
+        let res = e.detail.response;
+        if (res) {
+          this.countStorage = this.storages.length;
+        }
+      }
+
       async _responseJobs(e) {
+
+        this.countActive = 0;
+        this.countInactive = 0;
 
         this.config = store.get();
         this.jobapi = this.config.api.job_api; //this.config.get('api.job_api');
         // console.log("config = ",this.config);
-        // console.log("config jobapi= ", this.jobapi);
-
+        // console.log("_responseJobs jobapi= ", this.jobapi);
 
         this.countInactive = 0;
         let res = e.detail.response;
 
-        if (this.jobs && this.jobs.length) {
-          let count = await this.countDataInactive(this.jobs.length)
-          // console.log("res of count = ",count);
-          this.countActive = count.countActive;
-          this.countInactive = count.countInactive;
+        if (res) {
+          if (this.jobs && this.jobs.length) {
+            let countResult = await this.countDataInactive(this.jobs.length);
+            // this.countActive = countResult.countActive;
+            // this.countInactive = countResult.countInactive;
+          }
         }
-
+        else {
+          // console.log("error call api");
+        }
       }
 
       async countDataInactive(len) {
 
-        // var self = this;
+        let countActive = 0;
+        let countInactive = 0;
 
         if (len > 0) {
           let _jobLists = [];
-          let _countInactive = 0;
-          return new Promise((res, rej) => {
-            let _countInactive = 0;
-            let _countActive = 0;
-            this.jobs.forEach((job, index) => {
-              let url = `${this.jobapi}/${encodeURIComponent(job)}`;
-              // console.log("_countInactive : ", _countInactive);
-              $.getJSON(url, function (data) {
-                _jobLists.push({
-                  "job_id": job,
-                  "active": (data.active === 'true' || data.active == true)
-                });
 
-                if (data.active === 'true' || data.active == true) {
-                  _countActive++;
-                  // console.log("countActive = ",self.countActive);
-                } else {
-                  _countInactive++;
-                }
-                // console.log("data = ", data);
-                if (index == len - 1) {
-                  // console.log("_countInactive : ", _countInactive);
-                  res({
-                    countInactive: _countInactive,
-                    countActive: _countActive
-                  });
-                }
-              })
-                .fail((jqXHR, textStatus, errorThrown) => {
-                  // material.clearCache();
-                  console.log("error = ", errorThrown);
-                  rej(errorThrown);
-                })
-            }, this)
+          for (let i = 0; i < this.jobs.length; i++) {
+            let data = this.jobs[i];
 
-          })
+            let url = `${this.jobapi}/${encodeURIComponent(data)}`;
+            let result = await this.getResult(url, data);
+
+            _jobLists.push(result);
+            // console.log("getResult : ", result);
+            if (result.active) {
+              this.countActive++;
+            } else {
+              this.countInactive++;
+            }
+          };
         }
+
+        return new Promise((res) => {
+          res({
+            countActive: countActive,
+            countInactive: countInactive
+          })
+        })
       }
 
+      async getResult(url, jobID) {
+        return new Promise((res, rej) => {
+
+          $.getJSON(url, function (data) {
+            res({
+              "job_id": jobID,
+              "active": (data.active === 'true' || data.active == true)
+            });
+          });
+        });
+      }
     }
+
 
 
 
